--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
+
 <h1>project<h1>
 Hi guys this is our project let's build our project by using this page
+
+This is not a local page it is an online hosted page that which was provided by github when we bulit our project in this page then we will able to show that in time of interview to the interviewer that we have a project and by showing this link they able to understand what is our project is
